# Practica1-EDD-Primer-Semestre-2018

QtPractica1/: Cola.cpp  Cola.h  Lista.cpp  Lista.h  NodoUser.cpp  NodoUser.h  Pila.cpp  Pila.h.autosave  Practica1EDD2018.h  QtPractica1.pro  main.cpp
build-QtPractica1-Desktop_Qt_5_12_1_GCC_64bit-Debug/: Makefile  QtPractica1
practica1/: CMakeLists.txt
practica1/practica1/: CMakeLists.txt
practica1/practica1/src/: Lista.h  NodoCola.cpp  NodoCola.h  NodoPila.cpp  NodoPila.h  Pila.h  practica1.cpp  practica1.h
